💄 Ui: remaining cards

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="top">
 
             <div id="deck" @click="roomCards.length <= 1 ? getCards() : null">
-                DUNGEON
+                DUNGEON {{ remaning }}
             </div>
 
             <div id="room">
