🐛 Fix: bare hands fight

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
         }
 
         .bottom {
-            margin: 2px;
+            margin: auto;
             padding: 10px;
             display: flex;
+            width: fit-content;
             justify-content: center;
             align-items: center;
         }
@@ -104,7 +105,7 @@
             height: 350px;
             max-height: 350px;
             margin-left: 10px;
-            width: 1020px;
+            width: 900px;
             padding: 10px;
             background-color: var(--accent-color);
             display: flex;
