--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="top">
 
             <div id="deck" @click="roomCards.length <= 1 ? getCards() : null">
-                <p>DUNGEON</p>
+                <p>DUNGEON <i class="fa-solid fa-hand-pointer"></i></p>
                 <h1>CARDS LEFT: {{ remaning }}</h1>
             </div>
 
